@@ -285,6 +285,10 @@ OCaml 4.14.0
   (Jacques Garrigue and Takafumi Saikawa,
    review by Thomas Refis and Florian Angeletti)
 
+- #10575: add a -dump-dir flag, which redirects all debugging printer
+   (`-dprofile`, `-dlambda`, ...) to the target directory
+  (Florian Angeletti, review by Thomas Refis and Gabriel Scherer)
+
 * #10627: Make row_field abstract
   Completes #10474 by making row_field abstract too.
   An immutable view row_field_view is provided, and one converts between it
